<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2012-2013 Trento RISE
  
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at
  
         http://www.apache.org/licenses/LICENSE-2.0
  
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either   express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<resources>

    <string name="empty" />
    <string name="add">Add</string>
    <string name="app_name">MyPeople</string>

    <string-array name="fragment_array">
        <item>Shared</item>
        <item>Campus</item>
        <item>MyGroups</item>
        <item>MyProfile</item>
        <item>Synchronize</item>
        <item>Tutorial</item>
    </string-array>

    <string name="home_tab_me">Me</string>
    <string name="home_tab_mygroups">My Groups</string>
    <string name="home_tab_mycommunities">Campus</string>
    <string name="campus_tab_people">People</string>
    <string name="campus_tab_suggested">Suggested</string>
    <string name="campus_tab_communities">Communities</string>
    <string name="mainmenu_home">Home</string>
    <string name="mainmenu_myprofile">My Profile</string>
    <string name="mainmenu_mygroups">My Groups</string>
    <string name="mainmenu_mytopics">My Topics</string>
    <string name="mainmenu_campus">Campus</string>
    <string name="user_mp_more">&#8230;</string>
    <string name="user_mp_more_new">+</string>
    <string name="mygroups_add">Add group</string>
    <string name="mygroups_add_title">Add new group</string>
    <string name="mygroups_add_person_title">Add new person</string>
    <string name="mygroups_add_hint">New group</string>
    <string name="mygroups_delete">Delete</string>
    <string name="mygroups_delete_title">Delete group</string>
    <string name="mygroups_delete_hint">Delete group</string>
    <string name="mygroups_rename">Rename</string>
    <string name="mygroups_rename_title">Rename group</string>
    <string name="mygroups_rename_hint">Rename group</string>
    <string name="mygroups_sub">Options</string>
    <string name="mygroups_sub_title">Options</string>
    <string name="person_options_title">Person options</string>
    <string name="mygroups_addto_options_title">Add to My Groups</string>
    <string name="people_hint_name">Search</string>
    <string name="people_search_desc">Search people by name</string>
    <string name="community_action_desc">Add community</string>
    <string name="community_action_add">+</string>
    <string name="myprofile_communities_expand">+</string>
    <string name="myprofile_community_remove">x</string>
    <string name="menu_item_myprofile_edit_text">Edit profile</string>
    <string name="editprofile">Edit profile</string>
    <string name="editprofile_name">Name</string>
    <string name="editprofile_surname">Surname</string>
    <string name="app_failure_security">Failed to retrieve authentication data</string>
    <string name="app_failure_setup">Failed to initialize application</string>
    <string name="app_failure_profile_missing">We need to save your profile in order to proceed with the application</string>
    <string name="app_failure_operation">OOPS! An error occurred. Please check your connection or try again later</string>
    <string name="topic_action_desc">x</string>
    <string name="mygroups_name_empty">Group name cannot be empty</string>
    <string name="mygroups_name_duplicate">A group with this name already exists</string>
    <string name="create_topic_name">Title:</string>
    <string name="create_topic_def">About what?</string>
    <string name="create_topic_add">Add</string>
    <string name="create_topic_sources">Where from?</string>
    <string name="create_topic_def_hint">*Define your topic with tags.</string>
    <!-- <string name="create_topic_def_hint">*A topic can be defined by text tags, semantic tags and entities.</string> -->
    <string name="create_topic_sources_hint">*Where does the information come from? (people, groups, communities)</string>
    <!-- <string name="create_topic_sources_hint">*Sources may include people, groups and communities.</string> -->
    <string name="create_topic_content">What kind of content?</string>
    <string name="create_topic_arg_topic">topic</string>
    <string name="mytopics_add">Add</string>
    <string name="mytopics_add_title">Add new topic</string>
    <string name="mytopics_edit_title">Edit topic</string>
    <string name="mytopics_name_empty">Topic name cannot be empty</string>
    <string name="mytopics_sources_required">Choose at least one source</string>
    <string name="mytopics_content_type_required">Choose at least one content type</string>
    <string name="topic_content_dialog_title">Select content types</string>
    <string name="topic_content_dialog_all">All types of content</string>
    <string name="topic_content_dialog_photo_video">Photo/Video</string>
    <string name="topic_content_dialog_pois">Places</string>
    <string name="topic_content_dialog_events">Events</string>
    <string name="topic_content_dialog_exps">Experience</string>
    <string name="topic_content_dialog_portfolios">Portfolios</string>
    <string name="topic_content_dialog_journeys">Journeys</string>
    <string name="topic_content_dialog_stories">Stories</string>
    <string name="topic_content_dialog_type_required">Choose at least one content type</string>
    <string name="content_empty">No items.</string>
    <string name="people_list_empty">No people here!</string>
    <string name="source_select_title">Select sources</string>
    <string name="source_select_public">Public</string>
    <string name="shared_content_filters_portfolio">Portfolio</string>
    <string name="shared_content_filters_journey">Journey</string>
    <string name="shared_content_filters_poi">Place</string>
    <string name="shared_content_filters_event">Event</string>
    <string name="shared_content_filters_experience">Experience</string>
    <string name="shared_content_filters_story">Story</string>
    <string name="shared_content_menu_header">Shared content</string>
    <string name="shared_content_menu_author">Author\'s profile</string>
    <string name="shared_content_menu_topic">Make a topic and follow the update</string>
    <string name="shared_content_menu_sharing">Sharing options</string>
    <string name="shared_content_menu_app">Switch to app</string>
    <string name="a_shared">Shared</string>
    <string name="a_campus">Campus</string>
    <string name="a_topics">My topics</string>
    <string name="a_groups">My groups</string>
    <string name="a_profile">My profile</string>
    <string name="tmp_entity">Tag 1, Entity 2, &#8230;</string>
    <string name="tmp_sources">Source 1, source2, &#8230;</string>
    <string name="tmp_content">Type 1, type 2, &#8230;</string>
    <string name="app_uid_label">SmartCampus</string>
    <string name="sharing_success">Object shared successfully.</string>
    <string name="topics_title">Topics</string>
    <string name="shared_title">Shared data</string>
    <string name="groups_title">Groups</string>
    <string name="profile_title">Profile</string>
    <string name="campus_title">Campus</string>
    <string name="token_required">Please login before proceeding with the application.</string>
    <string name="auth_failed">Application initialization failed. Try connecting again.</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    
    <string name="sync_ok">Your data is synchronized!</string>
    <string name="sharing_title">Sharing \'%s\'</string>

</resources>