<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2012-2013 Trento RISE
  
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at
  
         http://www.apache.org/licenses/LICENSE-2.0
  
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either   express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:divider="@android:color/transparent"
    android:dividerHeight="20dp"
    android:fillViewport="true" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:padding="10dp" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:text="@string/create_topic_name"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:textColor="@color/base_communitymanager" />

        <EditText
            android:id="@+id/topic_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/create_topic_name" />

        <requestFocus />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/create_topic_def"
                android:textAppearance="@android:style/TextAppearance.Large"
                android:textColor="@color/base_communitymanager" />

            <Button
                android:id="@+id/create_topic_add_def"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_topic_add" />
        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="3dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_topic_def_hint"
            android:textColor="@color/sc_dark_gray"
            />

        <TextView
            android:id="@+id/create_topic_def_items"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:paddingBottom="20dp"
            android:text="@string/tmp_entity"
            android:textColor="@color/sc_dark_gray"
            android:visibility="gone" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/create_topic_sources"
                android:textAppearance="@android:style/TextAppearance.Large"
                android:textColor="@color/base_communitymanager" />

            <Button
                android:id="@+id/create_topic_add_sources"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_topic_add" />
        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="3dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_topic_sources_hint"
            android:textColor="@color/sc_dark_gray"
             
            />

        <TextView
            android:id="@+id/create_topic_source_items"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:paddingBottom="20dp"
            android:text="@string/tmp_sources"
            android:textColor="@color/sc_dark_gray"
            android:visibility="gone" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/create_topic_content"
                android:textAppearance="@android:style/TextAppearance.Large"
                android:textColor="@color/base_communitymanager" />

            <Button
                android:id="@+id/create_topic_add_content"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_topic_add" />
        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="3dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/create_topic_content_items"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:paddingBottom="20dp"
            android:text="@string/tmp_content"
            android:textColor="@color/sc_dark_gray"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/create_topic_cancel"
                style="@style/Theme.communitymanager"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:padding="3dp"
                android:text="@android:string/cancel" />

            <Button
                android:id="@+id/create_topic_ok"
                style="@style/Theme.communitymanager"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:padding="3dp"
                android:text="@android:string/ok" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>
